fix: text overflow bij taken en pijltje van bloedruk zou niet meer mee moet scrollen

--- a/css/home.css
+++ b/css/home.css
@@ -93,7 +93,7 @@
 }
 
 .pijltje {
-    position: fixed;
+    display: block;;
     margin-top: 190px;
     margin-left: 16px;
 }
